adding stuff to make it globally installable

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "humanjs",
-    "description": "App generator for single page apps. A. la. http://humanjavascript.com",
+    "description": "single page app scaffolding a. la. http://humanjavascript.com",
     "version": "0.0.1",
     "preferGlobal": true,
     "dependencies": {
@@ -8,5 +8,8 @@
         "colors": "0.6.0-1",
         "ncp": "0.4.2",
         "readable-stream": "1.0.2"
+    },
+    "bin": {
+        "humanjs": "./bin/humanjs"
     }
 }
