--- a/template/.jshintignore
+++ b/template/.jshintignore
@@ -2,5 +2,6 @@ node_modules
 public/
 clientapp/modules
 clientapp/libraries
-clientapp/.build
-clienttests/assets
+clientapp/templates.js
+clienttests
+
