--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "url": "HenrikJoreteg/humanjs"
   },
   "scripts": {
-    "start": "node ./bin/humanjs"
+    "start": "node ./bin/humanjs",
+    "test": "node test.js"
   }
 }
