--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "readable-stream": "1.0.2",
     "rimraf": "~2.2.6",
     "slugger": "0.0.3",
-    "underscore": "1.5.2"
+    "underscore": "1.5.2",
+    "multiline": "~0.2.0",
+    "rc": "~0.3.4",
+    "find-root": "~0.1.1",
+    "fs-extra": "~0.8.1"
   },
   "homepage": "https://github.com/ampersandjs/ampersand",
   "keywords": [
