--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "multiline": "~0.2.0",
     "rc": "~0.3.4",
     "find-root": "~0.1.1",
-    "fs-extra": "~0.8.1"
+    "fs-extra": "~0.8.1",
+    "humps": "0.0.1",
+    "repeat-string": "~0.1.2"
   },
   "homepage": "https://github.com/ampersandjs/ampersand",
   "keywords": [
