--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ampersand-model": "~2.10.6",
     "colors": "0.6.0-1",
     "commander": "1.1.1",
+    "escodegen": "^1.3.3",
     "esprima": "~1.2.2",
     "find-root": "~0.1.1",
     "fs-extra": "~0.8.1",
