update to bootstrap 3.2 update html with new bootstrap classes override template for inputs with bootstrap style html remove zepto add ampersand-dom modify logic for selecting active nav items only navigate in app if no modifier keys are pressed during click

--- a/template/shared/.jshintignore
+++ b/template/shared/.jshintignore
@@ -1,7 +1,6 @@
 node_modules
 public/
-clientapp/modules
-clientapp/libraries
-clientapp/templates.js
-clienttests
-
+client/modules
+client/libraries
+client/templates.js
+test/*
