--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
   "bugs": "https://github.com/ampersandjs/ampersand/issues",
   "dependencies": {
     "ampersand-model": "^4.0.0",
-    "colors": "^0.6.0-1",
-    "commander": "^1.1.1",
+    "colors": "0.6.0-1",
+    "commander": "1.1.1",
     "escodegen": "^1.3.3",
     "esprima": "~1.2.2",
     "find-root": "~0.1.1",
-    "fs-extra": "^0.8.1",
+    "fs-extra": "~0.8.1",
     "humps": "0.0.1",
-    "jade": "^1.0.2",
-    "multiline": "^0.2.0",
-    "ncp": "^0.4.2",
-    "rc": "^0.3.5",
-    "readable-stream": "^1.0.2",
+    "jade": "~1.0.2",
+    "multiline": "~0.2.0",
+    "ncp": "0.4.2",
+    "rc": "~0.3.4",
+    "readable-stream": "1.0.2",
     "repeat-string": "~0.1.2",
     "rimraf": "~2.2.6",
     "slugger": "0.0.3",
-    "underscore": "1.6.0"
+    "underscore": "1.5.2"
   },
   "homepage": "https://github.com/ampersandjs/ampersand",
   "keywords": [
