--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ampersand",
   "description": "CLI tool for generating single page apps a. la. http://humanjavascript.com",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "author": "Henrik Joreteg <henrik@andyet.net>",
   "bin": {
     "ampersand": "./bin/ampersand"
@@ -9,7 +9,7 @@
   "bugs": "https://github.com/ampersandjs/ampersand/issues",
   "dependencies": {
     "ampersand-model": "^4.0.0",
-    "colors": "0.6.0-1",
+    "chalk": "^0.5.1",
     "commander": "1.1.1",
     "escodegen": "^1.3.3",
     "esprima": "~1.2.2",
