--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "ampersand-model": "^4.0.0",
     "chalk": "^0.5.1",
-    "commander": "1.1.1",
     "escodegen": "^1.3.3",
     "esprima": "~1.2.2",
     "find-root": "~0.1.1",
     "fs-extra": "~0.8.1",
     "humps": "0.0.1",
+    "inquirer": "^0.8.0",
     "jade": "~1.0.2",
     "multiline": "~0.2.0",
     "ncp": "0.4.2",
