--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "ampersand-model": "^4.0.0",
     "chalk": "^0.5.1",
     "escodegen": "^1.3.3",
-    "esprima": "~1.2.2",
-    "find-root": "~0.1.1",
-    "fs-extra": "~0.8.1",
-    "humps": "0.0.1",
+    "esprima": "^1.2.2",
+    "find-root": "^0.1.1",
+    "fs-extra": "^0.14.0",
+    "humps": "^0.4.2",
     "inquirer": "^0.8.0",
-    "jade": "~1.0.2",
-    "multiline": "~0.2.0",
-    "ncp": "0.4.2",
-    "rc": "~0.3.4",
-    "readable-stream": "1.0.2",
-    "repeat-string": "~0.1.2",
-    "rimraf": "~2.2.6",
-    "slugger": "0.0.3",
+    "jade": "^1.8.2",
+    "multiline": "^1.0.1",
+    "ncp": "^1.0.1",
+    "rc": "^0.5.5",
+    "readable-stream": "^1.0.2",
+    "repeat-string": "^1.2.0",
+    "rimraf": "^2.2.6",
+    "slugger": "^1.0.0",
     "underscore": "1.5.2"
   },
   "homepage": "https://github.com/ampersandjs/ampersand",
