--- a/package.json
+++ b/package.json
@@ -8,28 +8,27 @@
   },
   "bugs": "https://github.com/ampersandjs/ampersand/issues",
   "dependencies": {
-    "ampersand-model": "^4.0.0",
+    "ampersand-model": "^5.0.3",
     "chalk": "^1.0.0",
     "escodegen": "^1.3.3",
-    "esprima": "^1.2.2",
+    "esprima": "^2.1.0",
     "find-root": "^0.1.1",
     "fs-extra": "^0.14.0",
-    "humps": "^0.4.2",
     "inquirer": "^0.8.0",
     "jade": "^1.8.2",
+    "lodash": "^3.6.0",
     "multiline": "^1.0.1",
     "ncp": "^1.0.1",
-    "rc": "^0.5.5",
-    "readable-stream": "^1.0.2",
+    "rc": "^1.0.0",
+    "readable-stream": "~1.1.0",
     "repeat-string": "^1.2.0",
     "rimraf": "^2.2.6",
-    "slugger": "^1.0.0",
-    "underscore": "1.5.2"
+    "slugger": "^1.0.0"
   },
   "homepage": "https://github.com/ampersandjs/ampersand",
   "keywords": [
-    "clientside",
     "cli",
+    "clientside",
     "single page apps"
   ],
   "license": "MIT",
