--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: node_js
 node_js:
 - '0.10'
-before_install:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
-
 notifications:
   webhooks:
     urls:
-      - https://webhooks.gitter.im/e/df4440290bd89d941fb4
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: false     # default: false
-
-script: npm run test
+    - https://webhooks.gitter.im/e/df4440290bd89d941fb4
+    on_success: change
+    on_failure: always
+    on_start: false
+script: npm test
+deploy:
+  provider: npm
+  email: fyockm@gmail.com
+  api_key:
+    secure: jbUwlGZ+BNH5BYdOWTrMvCFbh0X9ZIaE/8HSebuNEbu+P5yQGOljEXuE6a6mTk+BXBpJD+RRUd375XI5ZijugUXkTBzbvfVJFAlGim6qhZo2Btznw5f2qZbp3+Ig6+YIIlxdV55fqRotiHgXTCG7NJWWNVKih/973Xpmsv8OICU=
+  on:
+    tags: true
+    repo: AmpersandJS/ampersand
